gitops/source-apps/apps/backend-crystal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecsdemo-crystal
  namespace: apps
spec:
  selector:
    app: ecsdemo-crystal
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 3000
