gitops/source-apps/apps/backend-crystal/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ecsdemo-crystal
spec:
  hosts:
  - ecsdemo-crystal
  http:
  - route:
    - destination:
        host: ecsdemo-crystal
